Prevent log in button from wrapping upon resize

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -182,6 +182,7 @@ a:hover#join {
 #login {
 	color: tomato;
   text-decoration: underline coral;
+  white-space: nowrap;
 }
 
 #WCG {
